test/test_examples/syntactic_examples/syntax_error/error_fun_def_11.zig
// Syntax error: missing parameter data type

const ifj = @import("ifj24.zig"); 

pub fn foo(param : ) void {

}  